# STIL_internship

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  platform_implementation.ipynb  requirements.txt  setup.py  tox.ini
docs/: Algorithm abstraction graph.drawio  Platform_Graphics.drawio
notebooks/: AutoEncoderPlaying.ipynb  Platform realization.ipynb  flush.txt  platform_implementation.ipynb  platform_playground.ipynb  plug_config.json
notebooks/.ipynb_checkpoints/: platform_playground-checkpoint.ipynb
src/: plot.py  results  results_timeshifted  test.py
src/algo/codec/: __init__.py  bpca.py  brotli.py  dummy.py  kmeans_1d.py  pca.py  pca_to_kmeans_1d_c.py  zlib.py  zstd.py
src/algo/codec/kmeans_1d_c/: Ckmeans.1d.dp.cpp  Ckmeans.1d.dp.h  EWL2.h  EWL2_dynamic_prog.cpp  EWL2_fill_SMAWK.cpp  EWL2_within_cluster.h  __init__.py  _ckmeans_1d_dp.cpp  dynamic_prog.cpp
src/algo/codec/kmeans_1d_nlogu_c/: KMeans.h  _kmeans_nlogu.cpp  metrics.cpp
src/algo/process/: __init__.py  dummy.py  normalize.py  tobinary.py
src/generator/: __init__.py  normal.py  normal_multivariate.py  uniform.py
src/scaffold/: __init__.py  json.py
src/stil_internship/: CMakeLists.txt  plot.py
src/stil_internship/algo/codec/: CMakeLists.txt  __init__.py  bpca.py  brotli.py  dummy.py  kmeans_1d.py  pca.py  pca_to_kmeans_1d_c.py  zlib.py  zstd.py
src/stil_internship/algo/codec/kmeans_1d_c/: CMakeLists.txt  __init__.py
src/stil_internship/algo/codec/kmeans_1d_c/include/: Ckmeans.1d.dp.h  EWL2.h  EWL2_within_cluster.h
src/stil_internship/algo/codec/kmeans_1d_c/src/: Ckmeans.1d.dp.cpp  EWL2_fill_SMAWK.cpp
src/stil_internship/algo/codec/kmeans_1d_nlogu_c/: CMakeLists.txt  __init__.py
src/stil_internship/algo/codec/kmeans_1d_nlogu_c/include/: KMeans.h  SMAWK.h  metrics.h  platform.h
src/stil_internship/algo/codec/kmeans_1d_nlogu_c/src/: KMeans.cpp  SMAWK.cpp  _kmeans_nlogu.cpp  metrics.cpp
src/stil_internship/algo/process/: __init__.py  dummy.py  normalize.py  tobinary.py
src/stil_internship/generator/: __init__.py  normal.py  normal_multivariate.py  uniform.py
src/stil_internship/scaffold/: __init__.py  json.py
test/: kmeans_nlogu.py
test/cpp/: CMakeLists.txt  test_KMeans.cpp  test_SMAWK.cpp  test_metrics.cpp
test/py/: test_cpp.py  test_kmeans_nlogu.py
